# chat-your-gesetzentwurf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
.elasticbeanstalk/: config.yaml
.github/workflows/: ci_cd.yaml
app/: logging_config.py  main.py
app/database/: config.py  database.py  (+2 more)
backend/: alembic.ini  pyproject.toml
backend/.streamlit/: sample.secrets.toml
backend/alembic/versions/: 6cf900a873e5_initial_migration.py
backend/app/: main.py  security.py
backend/app/api/versions/: v1.py
backend/app/celery/: celery_app.py
backend/app/database/: config.py  crud.py  model.py  schema.py
backend/app/database/models/: __init__.py  document.py  election.py  election_program.py  election_programm.py  parliament.py  party.py
backend/app/database/utils/: db_utils.py
backend/app/eval/: constants.py  dataset_generation.py  eval.py  langfuse_integration.py  main.py
backend/app/eval/eval_data/: spd_2021_dataset.json
backend/app/langchain/: agent.py  llm.py
backend/app/llama_index/: agent.py  ingestion.py  llm.py  loader.py  query_engine.py  tools.py  vector_store.py
backend/app/scraper/: populate_db.py  utils.py
backend/app/scraper/scripts/: populate_db.py  scrape_election_programs.py  update_db.py
backend/app/scraper/spiders/: election_program_spider.py
backend/app/scraper/utils/: api_utils.py  constants.py  s3_uploader.py
backend/app/utils/: get_response.py
backend/frontend/: app.py
backend/tests/integrations/: test_integration.py
backend/tests/integrations/setup/: setup_test_db.py  setup_test_server.py
backend/tests/integrations/test_data/: program_2.json
backend/tests/integrations/test_data/test_programs/: program_1.json
backend/tests/integrations/test_spiders/: test_spider_integration.py
backend/tests/scraper/utils/: test_api_utils.py  test_compare_and_fetch_update.py  test_pdf_downloader.py  test_s3_uploader.py
database/: init.sql
frontend/: Dockerfile  app.py  package.json
(+52 files in other folders)
