[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Richard <richard.kruemmel@code.berlin>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
langchain = "^0.0.281"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
