[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Richard <richard.kruemmel@code.berlin>"]
license = "GNU GENERAL PUBLIC LICENSE Version 3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
langchain = "^0.0.281"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic-settings = "^2.0.3"
psycopg2 = "^2.9.7"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
sqlalchemy = "^2.0.20"
pdfplumber = "^0.10.2"
pgvector = "^0.2.1"
openai = "^0.28.0"
tiktoken = "^0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
